# JpTypingApp

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  修改日志.md  协程源码学习注释版.cpp  学习文档-C++20协程速成.md
api_service/: gemini_service.py  test_tts.py
include/: AppUI.h  CoroTask.h
src/: AppUI.cpp  main.cpp
test_speech/: CMakeLists.txt  test_speech.cpp
